[package]
name = "wasm-custom-section"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Write a custom section in a Wasm module"
authors = ["Sven Sauleau <sven@sauleau.com>"]

[dependencies]
clap = { version = "3.1", features = ["cargo"] }
wasm-gen = "0.1"
wasmparser = "0.83"
pretty-hex = "0.2.1"
