[package]
name = "wasm-custom-section"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Write a custom section in a Wasm module"
authors = ["Sven Sauleau <sven@sauleau.com>"]

[dependencies]
clap = { version = "4.5.30", features = ["cargo"] }
wasm-gen = "0.1.4"
wasmparser = "0.226.0"
pretty-hex = "0.4.1"
